05-Services/Ingress/Path-Based/Examples/ingress-basic.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-basic-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: app.akashshankar.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
