05-Services/Ingress/Path-Based/Examples/ingress-path-based-routing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-path-routing
spec:
  ingressClassName: nginx
  rules:
  - host: app.akashshankar.in
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
