05-Services/Ingress/Path-Based/Examples/path-routing-exact-vs-prefix.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-exact-vs-prefix
spec:
  ingressClassName: nginx
  rules:
  - host: path.akashshankar.in
    http:
      paths:
      - path: /login
        pathType: Exact
        backend:
          service:
            name: web-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
